[package]
name = "rabe_py"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rabe_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
rabe = "0.3.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = {version = "1.0.89"}
paste = "1.0.10"
